[workspace]
members = [
    "common"
]


[package]
name = "minimongo"
version = "0.1.0"
edition = "2021"



[dependencies]
redb = "2.2.0"
regex = "1.11.1"
serde_json = "1.0"
serde = { version = "1.0.215", features = ["derive"] }
actix-web = "4.9.0"
actix-cors = "0.7.0"
enum_stringify = "0.6.0"
common = { path = "common" }