[workspace]
members = [
    "common"
]


[package]
name = "minimongo"
version = "0.5.3"
edition = "2021"
authors = ["wsds <wsds88801@163.com>"]  # 作者信息
description = "A pure Rust db for JSON, like mongo db"  # 必填，简要描述
license = "Apache-2.0"  # 许可证信息（如 MIT、Apache-2.0）
repository = "https://github.com/wsds/minimongo"  # 可选，代码仓库链接
keywords = ["mongodb", "json", "db"]  # 可选，关键词
categories = ["development-tools"]  # 可选，crates.io 支持的分类
readme = "README.md"



[dependencies]
redb = "2.2.0"
regex = "1.11.1"
serde_json = "1.0"
serde = { version = "1.0.215", default-features = false, features = ["derive"] }
actix-web = "4.9.0"
actix-cors = "0.7.0"
enum_stringify = "0.6.0"
common = { version = "0.1.0", path = "common" }

[profile.release]
lto = "fat"
debug = false
opt-level = "s"
panic = "abort"